Fix vertical stretch on level start button

--- a/packages/@coorpacademy-components/src/molecule/scope-content/style.css
+++ b/packages/@coorpacademy-components/src/molecule/scope-content/style.css
@@ -37,6 +37,7 @@
   font-weight: 600;
   font-size: 20px;
   color: dark;
+  max-width: 60%;
 }
 
 .time {
